cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_209.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/cfb64ede.c:177: error: DEAD_STORE
  The value written to &iv (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/cfb64ede.c:177:17: Write of unused value
175.                   iv = &ovec[0];
176.                   c2l(iv, v0);
177.                   c2l(iv, v1);
                       ^
178.               }
179.               d0 ^= ti[0];
